...
    let kCellId = "kCellId"
    override func viewDidLoad() {
        super.viewDidLoad()

        navigationItem.title = "宝藏"
        
        datas = ["SystermUtil","UIKit","ThirdFramwrok", ""]
        
        let tab = UITableView(frame: .zero, style: .plain)
        tab.delegate = self
        tab.dataSource = self
        tab.tableFooterView = UIView()
        view.addSubview(tab)
...
