...
import SnapKit
import Alamofire

class SSSystermUtilVC: SSBaseViewController {
    

    var datas = ["Multithreading","CoreFoundation","KnowledgePoint","UserInterfaceStyle","QuartzAndCoreGraphics","UIWindowScene", "Assembly", "Point", "AirDrop"]
    
   

    let handleDataSouces = SSHandelDataSouces()
    
    
...
